// Brunch database schema (SQLite via Drizzle)
// Source of truth: src/server/schema.ts

Project brunch {
  database_type: 'SQLite'
  Note: 'Generated from src/server/schema.ts'
}

Table specification {
  id integer [pk, increment]
  name text [not null]
  mode text [not null, default: 'greenfield', note: 'enum: greenfield | brownfield']
  active_turn_id integer [note: 'soft ref -> turn.id (no FK in schema)']
  created_at text [not null, default: `datetime('now')`]
  updated_at text [not null, default: `datetime('now')`]
}

Table turn {
  id integer [pk, increment]
  specification_id integer [not null, ref: > specification.id]
  parent_turn_id integer [ref: > turn.id]
  phase text [not null, note: 'enum: grounding | design | requirements | criteria']
  turn_kind text [not null, default: 'question', note: 'enum: question | kickoff | recovery']
  question text [not null, default: '']
  why text
  impact text [note: 'enum: high | medium | low']
  answer text
  is_resolution integer [not null, default: false, note: 'boolean']
  user_parts text
  assistant_parts text
  created_at text [not null, default: `datetime('now')`]
}

Table option {
  id integer [pk, increment]
  turn_id integer [not null, ref: > turn.id]
  position integer [not null]
  content text [not null]
  is_recommended integer [not null, default: false, note: 'boolean']
  is_selected integer [not null, default: false, note: 'boolean']

  indexes {
    (turn_id, position) [unique, name: 'option_turn_position_unique']
  }
}

Table phase_outcome {
  id integer [pk, increment]
  specification_id integer [not null, ref: > specification.id]
  phase text [not null, note: 'enum: grounding | design | requirements | criteria']
  proposal_turn_id integer [not null, ref: > turn.id]
  status text [not null, default: 'proposed', note: 'enum: proposed | confirmed | superseded']
  summary text [not null]
  closure_basis text [note: 'enum: interviewer_recommended | user_forced']
  confirmation_turn_id integer [ref: > turn.id]
  confirmed_at text
  superseded_at text
  created_at text [not null, default: `datetime('now')`]
}

Table knowledge_item {
  id integer [pk, increment]
  specification_id integer [not null, ref: > specification.id]
  kind text [not null, note: 'enum: goal | term | context | constraint | decision | assumption | requirement | criterion']
  subtype text
  content text [not null]
  rationale text
  kind_ordinal integer [not null]
}

Table turn_knowledge_item {
  turn_id integer [not null, ref: > turn.id]
  item_id integer [not null, ref: > knowledge_item.id]
  relation text [not null, default: 'captured', note: 'enum: captured | confirmed | edited | invalidated | reviewed | rejected']

  indexes {
    (turn_id, item_id, relation) [pk]
  }
}

Table knowledge_edge {
  from_item_id integer [not null, ref: > knowledge_item.id]
  to_item_id integer [not null, ref: > knowledge_item.id]
  relation text [not null, note: 'enum: depends_on | derived_from | constrains | verifies | refines']

  indexes {
    (from_item_id, to_item_id, relation) [pk]
  }
}
